# robotics-software-community

1-temperature-monitor/: Makefile  README  docker-compose.yml
1-temperature-monitor/cpp_node/: CMakeLists.txt  Dockerfile  package.xml
1-temperature-monitor/cpp_node/include/temperature_monitor/: temperature_subscriber.hpp
1-temperature-monitor/cpp_node/src/: main.cpp  temperature_subscriber.cpp
1-temperature-monitor/cpp_node/test/: test_temperature_subscriber.cpp
1-temperature-monitor/database/: init.sql  test_database.sh
1-temperature-monitor/launch/: temperature_system.launch.py
1-temperature-monitor/msg_interfaces/: package.xml
1-temperature-monitor/msg_interfaces/msg/: TemperatureReading.msg
1-temperature-monitor/python_node/: Dockerfile  package.xml  setup.cfg  setup.py
1-temperature-monitor/python_node/resource/: temperature_monitor
1-temperature-monitor/python_node/src/temperature_monitor/: __init__.py  temperature_publisher.py
1-temperature-monitor/python_node/test/: test_temperature_publisher.py
1-temperature-monitor/web_viz/: Dockerfile
1-temperature-monitor/web_viz/src/: web_visualizer.py
1-temperature-monitor/web_viz/src/static/css/: style.css
1-temperature-monitor/web_viz/src/static/js/: script.js
1-temperature-monitor/web_viz/src/templates/: debug.html  index.html
msg_interfaces/: CMakeLists.txt
