<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>temperature_monitor</name>
  <version>1.0.0</version>
  <description>Temperature monitoring system - Python components</description>
  <maintainer email="ahmed.osama8282@gmail.com">ahmedosama07</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>temperature_interfaces</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-unittest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>